--- a/style.css
+++ b/style.css
@@ -239,7 +239,14 @@ body{
 /*sa taas ng videos ung anime na list*/
 .AnimeListt{
 	color:white;
-	font-size:40px;
+	font-size:45px;
+	font-family:cursive;
+	padding-left:12%;
+	
+}
+
+.AnimeLisstt:hover{
+        color:hotpink;
 }
 
 
