--- a/style.css
+++ b/style.css
@@ -362,7 +362,9 @@ fab fa-facebook-f{
 .upcoming{
 	width:50%;
 	height:350px;
-	margin-left:50%;
+	
+	text-align:center;
+	position:center;
 	
 }
 
