--- a/style.css
+++ b/style.css
@@ -363,7 +363,8 @@ fab fa-facebook-f{
 	width:50%;
 	height:350px;
 	justify-content:center;
-	text-align:center;
+	margin-left:auto;
+	margin-right:auto;
 	
 	
 	
