--- a/style.css
+++ b/style.css
@@ -362,9 +362,9 @@ fab fa-facebook-f{
 .upcoming{
 	width:50%;
 	height:350px;
-	justify-content:center;
-	margin-left:auto;
-	margin-right:auto;
+	
+	margin-left:500px;
+	
 	
 	
 	
