--- a/style.css
+++ b/style.css
@@ -362,12 +362,13 @@ fab fa-facebook-f{
 .upcoming{
 	width:50%;
 	height:350px;
-	padding-left:50%;
-	position:center;
+	display: block;
+        margin-left: auto;
+        margin-right: auto;
 	
 	
 	
-	
+		
 	
 }
 
